Fixing padding of the cards on smaller screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 body {
     /* padding top so items are not behind the navbar */
-    padding-top: 6.5rem;
+    padding-top: 5.5rem;
 }
 
 button.navbar-toggler {
